cambios introduccion y bibliografia

--- a/1_introduction/1_motivation.tex
+++ b/1_introduction/1_motivation.tex
@@ -11,24 +11,27 @@
 
 En la actualidad, para que la empleabilidad de los nuevos egresados satisfaga las necesidades del mercado laboral europeo, las competencias juegan un papel fundamental~\cite{communique2012making}, y tanto las aptitudes y como las habilidades que la sociedad demandará a los futuros profesionales constituyen pilares básicos a tener en cuenta en el diseño de las estrategias educativas~\cite{de2010project}. Por consiguiente, tanto en la enseñanza como la evaluación de competencias deben tenerse en cuenta en los planes de estudio a todos los niveles educativos, incluida la universidad. En el contexto del Espacio Europeo de Educación Superior~\footnote{http://www.eees.es/} e influenciado por la situación actual de  la sociedad, sus instituciones sociales y políticas, la universidad se encuentra en el foco de las reformas para alcanzar la convergencia a nivel europeo. En este marco, son las competencias, las tareas y su evaluación los pilares en los que se basa el nuevo currículum universitario~\cite{zabala2005espacio}.  
 
-Centrándonos en la evaluación, podemos decir que el foco de interés se centra ahora en cómo evaluar a los estudiantes en el desempeño de sus competencias. Proyectos como el \emph{Tuning Educational Structures in Europe}~\cite{gonzalez2003tuning}, apoyado por el Lifelong Learning Program de la Unión Europea, muestran la importancia de utilizar el concepto de competencia como base para los resultados de aprendizaje. Las competencias de aprendizaje son habilidades que un alumno ha de ser capaz de demostrar una vez que termina su formación. Estas competencias de aprendizaje se dividen en dos grupos: específicas y genéricas~\cite{strijbos2015criteria}. Competencias específicas son aquellas relacionadas directamente con la utilización de conceptos, teorías o habilidades propias de un área en concreto, mientras que las competencias genéricas son habilidades, capacidades y conocimientos que cualquier estudiante debería desarrollar independientemente de su área de estudio. Aunque obviamente sigue siendo muy importante el desarrollo del conocimiento específico de cada área de estudio, es un hecho que el tiempo y la atención también deben dedicarse al desarrollo de las competencias genéricas. %Igualmente es importante reconocer la aplicación de dichas habilidades genéricas fuera del ámbito académico, ya que son cada vez más relevantes para la preparación de estudiantes para su futuro papel en la sociedad, en términos de empleabilidad y ciudadanía.
+Centrándonos en la evaluación, podemos decir que el foco de interés se centra ahora en cómo evaluar a los estudiantes en el desempeño de sus competencias. Proyectos como el \emph{Tuning Educational Structures in Europe}~\cite{gonzalez2003tuning}, apoyado por el Lifelong Learning Programme de la Unión Europea~\cite{llp:2006}, muestran la importancia de utilizar el concepto de competencia como base para los resultados de aprendizaje. Las competencias de aprendizaje son habilidades que un alumno ha de ser capaz de demostrar una vez que termina su formación. Estas competencias de aprendizaje se dividen en dos grupos: específicas y genéricas~\cite{strijbos2015criteria}. Competencias específicas son aquellas relacionadas directamente con la utilización de conceptos, teorías o habilidades propias de un área en concreto, mientras que las competencias genéricas son habilidades, capacidades y conocimientos que cualquier estudiante debería desarrollar independientemente de su área de estudio. Aunque obviamente sigue siendo muy importante el desarrollo del conocimiento específico de cada área de estudio, es un hecho que el tiempo y la atención también deben dedicarse al desarrollo de las competencias genéricas. %Igualmente es importante reconocer la aplicación de dichas habilidades genéricas fuera del ámbito académico, ya que son cada vez más relevantes para la preparación de estudiantes para su futuro papel en la sociedad, en términos de empleabilidad y ciudadanía.
 
 \subsection*{Las TIC en la educación}
 
 En los últimos años, han sido numerosos los avances en lo que al uso de las TIC se refiere. Esto, junto con el asentamiento de internet, ha traído consigo que la sociedad se haya visto obligada a abordar cambios en su habitual modus operandi. Desde la manera en que los ciudadanos interactúan con las instituciones públicas hasta la forma en que estos se relacionan con sus amigos. Y por supuesto, también ha afectado a la educación. El campo de investigación que aborda el uso de la tecnología como parte del proceso de aprendizaje es el \emph{aprendizaje mejorado por la tecnología} (TEL, del inglés \emph{Technology Enhanced Learning}).
 
-Según la UNESCO, es preciso que los docentes reciban los instrumentos necesarios para alcanzar los objetivos sociales y económicos que constituyen el eje de todo sistema educativo nacional. Para ello, se ha creado un conjunto de baremos internacionales que definen las competencias necesarias para impartir una enseñanza eficaz mediante el uso de las TIC: El Marco de competencias de los docentes en materia de TIC de la UNESCO~\cite{midoro2013guidelines}. Este marco tiene por objeto informar de la función de las TIC en la reforma educativa, así como ayudar a los Estados Miembros a que elaboren criterios de competencia en la materia para los docentes. Herramientas como los cursos virtuales, los wikis o los mundos virtuales son más que habituales como soporte a la docencia presencial, y en algunos casos, como ocurre con los cursos online masivos y abiertos (\emph{MOOCs}, del inglés \emph{Massive Open Online Courses}), es el único punto de encuentro entre el estudiante y el profesor.
+Según la UNESCO, es preciso que los docentes reciban los instrumentos necesarios para alcanzar los objetivos sociales y económicos que constituyen el eje de todo sistema educativo nacional. Para ello, se ha creado el marco de competencias de los docentes en materia de TIC de la UNESCO~\cite{midoro2013guidelines}, un conjunto de baremos internacionales que definen las competencias necesarias para impartir una enseñanza eficaz mediante el uso de las TIC. Este marco tiene por objeto informar de la función de las TIC en la reforma educativa, así como ayudar a los Estados Miembros a que elaboren criterios de competencia en la materia para los docentes. Herramientas como los cursos virtuales, los wikis o los mundos virtuales son más que habituales como soporte a la docencia presencial, y en algunos casos, como ocurre con los cursos online masivos y abiertos (\emph{MOOCs}, del inglés \emph{Massive Open Online Courses}), es el único punto de encuentro entre el estudiante y el profesor.
 
 En la mayoría de estas herramientas la actividad generada por cada estudiante suele quedar registrada. Entiéndase por \emph{actividad generada} a la recopilación de la información de la interacción que cada estudiante realiza con la herramienta como, por ejemplo, los accesos al sistema, el envío de sus actividades o la lectura de un mensaje en un foro. Según \cite{Chebil:2012, Florian:2011} la recopilación de los rastros de interacción producidos por este tipo de herramientas, con un filtrado adecuado, podría ser una información muy valiosa para obtener indicadores del desempeño de los estudiantes en ciertas competencias. Las técnicas de \emph{Learning Analytics} facilitan la explotación de este tipo de información~\cite{conde2015exploring}. El \emph{learning analytics} es un área de investigación dentro del TEL que está enfocada en el desarrollo de métodos para analizar y detectar patrones en los datos recogidos en los entornos educativos y aprovecharlos para mejorar el aprendizaje~\cite{chatti2014learning}.  Cómo interactúan los estudiantes, cuándo lo hacen o con qué frecuencia consultan los recursos son cuestiones cuyas respuestas podrían utilizarse como indicadores de algunas competencias. 
 
-Decidir qué indicadores se utilizarán como evidencias de una u otra competencia es tarea de investigadores y profesores. A menos que se pueda considerar que la evaluación de una competencia genérica esté directamente conectada con la evaluación de una actividad específica en la herramienta, su evaluación requiere de la inventiva y originalidad del profesor para ser capaz, por un lado, de diseñar actividades que obliguen al estudiante a desempeñar las competencias que se quieren evaluar, y por otro lado, diseñar evaluaciones que midan el desempeño real del estudiante en dicha competencia a partir de la interacción de estos con la herramienta. Ya que tanto los investigadores como los profesores se enfrentan a tareas de diseño, podemos decir que la educación se puede considerar como una \emph{ciencia de diseño}~\cite{laurillard2012teaching}. 
+Decidir qué indicadores se utilizarán como evidencias de una u otra competencia es tarea de investigadores y profesores. A menos que se pueda considerar que la evaluación de una competencia genérica esté directamente conectada con la evaluación de una actividad específica en la herramienta, su evaluación requiere de la inventiva y originalidad del profesor para ser capaz, por un lado, de diseñar actividades que obliguen al estudiante a desempeñar las competencias que se quieren evaluar y, por otro lado, diseñar evaluaciones que midan el desempeño real del estudiante en dicha competencia a partir de la interacción de este con la herramienta. Ya que tanto los investigadores como los profesores se enfrentan a tareas de diseño, podemos decir que la educación se puede considerar como una \emph{ciencia de diseño}~\cite{laurillard2012teaching}. 
 
 \subsection*{La educación como una ciencia de diseño}
 \label{sec:dbr}
 
-Cuando se trata de llevar a la práctica un método innovador diseñado por un investigador, este es embebido por el sistema educativo y su contexto, de manera que su implementación final puede convertirse en algo muy diferente del diseño original. Los investigadores tienen que enfrentarse a la complejidad de las situaciones del mundo real y su resistencia al control experimental~\cite{collins2004design}. 
+Cuando se trata de llevar a la práctica un método innovador diseñado por un investigador, este es incorporado en el sistema educativo y su contexto, de manera que su implementación final puede convertirse en algo muy diferente del diseño original. Los investigadores tienen que enfrentarse a la complejidad de las situaciones del mundo real y su resistencia al control experimental~\cite{collins2004design}. 
 
-Para afrontar esta situación surgió una metodología de \emph{investigación del diseño} (DBR, del inglés, design-based research) que no es clásicamente experimental, sino iterativa, progresivamente refinando el diseño inicial basado en la teoría. Según Hevner~\cite{hevner2009interview}, \emph{El DBR se basa en ideas procedentes de la base del conocimiento del dominio. La inspiración para la actividad de diseño creativo puede proceder de muy diversas fuentes para así incluir enriquecedores problemas u oportunidades desde entornos de aplicación, artefactos existentes, analogías/metáforas y teorías. Lo que se añada a la base del conocimiento como resultado de la investigación del diseño incluirá añadidos o extensiones de las teorías y métodos originales realizados durante la investigación, los nuevos artefactos (productos y procesos de diseño), y todas las experiencias ganadas desde el desempeño de los ciclos de diseño iterativos y pruebas sobre el campo de artefacto en el entorno de aplicación}.
+Para afrontar esta situación surgió una metodología de \emph{investigación del diseño} (DBR, del inglés, design-based research) que no es clásicamente experimental, sino iterativa, progresivamente refinando el diseño inicial basado en la teoría. Según Hevner:
+\begin{quote}
+El DBR se basa en ideas procedentes de la base del conocimiento del dominio. La inspiración para la actividad de diseño creativo puede proceder de muy diversas fuentes para así incluir enriquecedores problemas u oportunidades desde entornos de aplicación, artefactos existentes, analogías/metáforas y teorías. Lo que se añada a la base del conocimiento como resultado de la investigación del diseño incluirá añadidos o extensiones de las teorías y métodos originales realizados durante la investigación, los nuevos artefactos (productos y procesos de diseño), y todas las experiencias ganadas desde el desempeño de los ciclos de diseño iterativos y pruebas sobre el campo de artefacto en el entorno de aplicación~\cite{hevner2009interview}
+\end{quote}
 
 En esta tesis se pretende desarrollar un método para aplicar DBR en la evaluación de competencias genéricas. Para ello, se propondrá un método iterativo para el diseño de evaluaciones a partir de indicadores procedentes de los registros de las herramientas informáticas utilizadas por los estudiantes.
 
