--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -4,7 +4,8 @@
 @book{zabala2005espacio,
   title={El espacio europeo de educaci{\'o}n superior, un reto para la universidad: competencias, tareas y evaluaci{\'o}n, los ejes del curr{\'\i}culum universitario},
   author={Zabala, Jes{\'u}s Go{\~n}i},
-  year={2005}
+  year={2005},
+  publisher={Barcelona : Editorial Octaedro, S.L.}
 }
 
 @inproceedings{communique2012making,
@@ -33,13 +34,13 @@
         url={www.scopus.com},
 }
 
-@book{Florian:2011,
+@article{Florian:2011,
         author={Florian,B. and Glahn,C. and Drachsler,H. and Specht,M. and Fabregat Gesa,R.},
         year={2011},
         title={Activity-based learner-models for learner monitoring and recommendations in moodle},
-        series={Lecture Notes in Computer Science (including subseries Lecture Notes in Artificial Intelligence and Lecture Notes in Bioinformatics)},
+        journal={Lecture Notes in Computer Science (including subseries Lecture Notes in Artificial Intelligence and Lecture Notes in Bioinformatics)},
         volume={6964 LNCS},
-        pages={111-124},
+        pages={111--124},
         publisher={Springer Berlin Heidelberg}
 }
 
@@ -280,11 +281,13 @@ author = "Leslie Borjas De Xena"
   organization={IEEE}
 }
 
-@inproceedings{carreras2013promotion,
+@article{carreras2013promotion,
   title={The promotion and assessment of generic skills from interdisciplinary teaching teams},
   author={Carreras Mar{\'\i}n, Anna and Blasco, Yolanda and Badia-Mir{\'o}, Marc and Bosch Pr{\'\i}ncep, Manuela and Morillo, Isabel and Cair{\'o} i C{\'e}spedes, Gemma and Casares Vidal, Dolors},
-  booktitle={Comunicaci{\'o} presentada a: Proceedings of EDULEARN13 Conference, 1st-3rd July 2013, Barcelona, Spain. ISBN: 978-84-616-3822-2.(0201-0207)},
-  year={2013}
+  journal={EDULEARN13 Proceedings},
+  pages={201--207},
+  year={2013},
+  publisher={IATED}
 }
 
 @article{lasa2013problem,
@@ -448,7 +451,7 @@ author = "Leslie Borjas De Xena"
 }
 
 @article{martin2013acquired,
-  title={Acquired Skills With The Implementation Of New Evaluation Methods At University Rey Juan Carlos},
+  title={{Acquired Skills With The Implementation Of New Evaluation Methods At University Rey Juan Carlos}},
   author={Mart{\'\i}n-Brice{\~n}o, MR and Prashar, S},
   journal={Proceedings of the International Conference of Education, Research and Innovation (ICERI) 2013},
   pages={4875--4878},
@@ -630,10 +633,11 @@ author = "Leslie Borjas De Xena"
 }
 
 @inproceedings{rashid2008engineering,
-  title={Engineering students performance evaluation of generic skills measurement: ESPEGS model},
+  title={Engineering students performance evaluation of generic skills measurement: {ESPEGS} model},
   author={Rashid, Rozeha A and Abdullah, Razimah and Zaharim, Azami and Ghulman, Hamzah Ahmad and Masodi, Mohd Saidfudin and Mauri, JL and Zaharim, A and Kolyshkin, A and Hatziprokopiou, M and Lazakidou, A and others},
   booktitle={Proceedings of the 5th WSEAS International Conference on Engineering Education (EE'08)},
   number={5},
+  pages={377--383},
   year={2008},
   organization={World Scientific and Engineering Academy and Society (WSEAS)}
 }
@@ -748,10 +752,11 @@ author = "Leslie Borjas De Xena"
 }
 
 @article{hevner2009interview,
-  title={Interview with Alan R. Hevner on “Design Science”},
+  title={{Interview with Alan R. Hevner on “Design Science”}},
   author={Hevner, Alan R},
   journal={Business \& Information Systems Engineering (BISE)},
   volume={1},
+  number={1},
   pages={126--129},
   year={2009}
 }
@@ -798,10 +803,11 @@ author = "Leslie Borjas De Xena"
 
 @article{bernheim2010educacion,
   title={La educaci{\'o}n permanente y su impacto en la educaci{\'o}n superior},
-  author={Bernheim, Carlos T{\"u}nnermann},
-  journal={Revista Iberoamericana de Educaci{\'o}n Superior},
+  author={T{\"u}nnermann Bernheim, Carlos},
+  journal={Revista Iberoamericana de Educaci{\'o}n Superior (RIES), M{\'e}xico, issue - unam /Universia},
   volume={1},
   number={1},
+  pages = {120--133},
   year={2010}
 }
 
@@ -892,7 +898,7 @@ author = "Leslie Borjas De Xena"
   title={La prueba escrita},
   author={Rojas-Vargas, Andrea},
   year={2008},
-  publisher={Ministerio de Educaci{\'o}n P{\'u}blica. Dirección de desarrollo curricular. Departamento de Evaluaci{\'o}n de los Aprendizajes}
+  publisher={Ministerio de Educaci{\'o}n P{\'u}blica de Costa Rica. Dirección de desarrollo curricular. Departamento de Evaluaci{\'o}n de los Aprendizajes}
 }
 
 @book{oates2006researching,
@@ -1000,10 +1006,11 @@ author = "Leslie Borjas De Xena"
 
 @article{i2007competencias,
   title={{Competencias TIC y trabajo en equipo en entornos virtuales}},
-  author={i Catas{\'u}s, Montse Guitert and Romeu, Teresa and P{\'e}rez-Mateo, Mar{\'\i}a},
+  author={Guitert, Montse and Romeu, Teresa and P{\'e}rez-Mateo, Mar{\'\i}a},
   journal={RUSC. Universities and Knowledge Society Journal},
   volume={4},
   number={1},
+  pages={1--12},
   year={2007}
 }
 
@@ -1019,6 +1026,7 @@ author = "Leslie Borjas De Xena"
   journal={Australasian Journal of Educational Technology},
   volume={24},
   number={2},
+  pages={195--210},
   year={2008}
 }
 
@@ -1052,7 +1060,7 @@ author = "Leslie Borjas De Xena"
 }
 
 @article{berns2013game,
-  title={Game-like language learning in 3-D virtual environments},
+  title={Game-like language learning in {3-D} virtual environments},
   author={Berns, Anke and Gonzalez-Pardo, Antonio and Camacho, David},
   journal={Computers \& Education},
   volume={60},
@@ -1194,7 +1202,7 @@ author = "Leslie Borjas De Xena"
 }
 
 @incollection{berns2013using,
-  title={Using a 3D online game to assess students’ foreign language acquisition and communicative competence},
+  title={Using a {3D} online game to assess students’ foreign language acquisition and communicative competence},
   author={Berns, Anke and Palomo-Duarte, Manuel and Dodero, Juan Manuel and Valero-Franco, Concepci{\'o}n},
   booktitle={Scaling up learning for sustained impact},
   pages={19--31},
@@ -1347,6 +1355,18 @@ author = "Leslie Borjas De Xena"
   howpublished ={\url{http://www.labrechadigital.org/labrecha/Articulos/los-beneficios-de-la-tecnologia-en-la-educacion.html}},
   note = {Accessed: 2016-01-11}
   year={2015}
+}
+
+@incollection{llp:2006,
+author = {European, Comission},
+booktitle = {{Decision No 1720/2006/EC of the European Parliament and of the Council of 15 November 2006 establishing an action programme in the field of lifelong learning}},
+month = nov,
+pages = {327/48 -- 327/49},
+publisher = {Official Journal of the European Union},
+title = {{The Lifelong Learning Programme}},
+chapter = {1},
+url={{http://eur-lex.europa.eu/legal-content/EN/TXT/PDF/?uri=CELEX:32006D1720&from=EN}},
+year = {2006}
 }
 
 @comment{jabref-meta: selector_publisher:}
