--- a/1_introduction/3_objetivos.tex
+++ b/1_introduction/3_objetivos.tex
@@ -4,8 +4,10 @@
 
 El principal objetivo de esta tesis es:
 
+
+%\textbf{Evaluar a los estudiantes en el desempeño de sus competencias genéricas mediante indicadores procedentes de los registros de actividades de aprendizaje}
 \bigskip
-\textbf{Evaluar a los estudiantes en el desempeño de sus competencias genéricas mediante indicadores procedentes de los registros de actividades de aprendizaje}
+\textbf{Proporcionar un método para diseñar y contrastar estrategias de evaluación de competencias genéricas a partir de los registros de actividad de los entornos de aprendizaje virtual, así como una herramienta informática que implemente el método}
 \bigskip
 
 Para alcanzar dicho objetivo, se comenzará definiendo una serie de preguntas de investigación a las que se tratará de dar respuesta mediante una revisión de la literatura. Las preguntas de investigación son las siguientes:
@@ -41,13 +43,13 @@ Por último, deberemos responder a la pregunta de qué técnicas se han empleado
 %\bigskip
 %A partir de aquí el objetivo de esta investigación será proveer a los diseñadores de evaluaciones de un lenguaje para obtener de manera automatizada un conjunto de indicadores entre los que elegir para ir aplicándolos a sus procesos de evaluación segun las competencias genéricas que quieran evaluar. Esto se divide en los siguientes tres objetivos:
 
-A partir del objetivo principal de esta tesis de evaluar a los estudiantes en el desempeño de sus competencias genéricas mediante indicadores procedentes de los registros de actividades de aprendizaje, se obtienen dos objetivos:
+A partir del objetivo principal de esta tesis de proporcionar un método a los docentes para diseñar y contrastar estrategias de evaluación de competencias genéricas a partir de los registros de actividad de los entornos de aprendizaje virtual, así como una herramienta informática que implemente el método, se obtienen dos objetivos:
  
-\paragraph*{O1. Definir un método que permita al docente obtener de manera automática un conjunto de indicadores de un entorno de aprendizaje virtual}
+\paragraph*{O1. Definir un método que permita al docente obtener de manera automática un conjunto de indicadores de los entornos de aprendizaje virtual}
 
-Basándonos en la metodologia DBR, introducida en los capítulos anteriores, se definirá un método que permita evaluar las competencias genéricas de los estudiantes a partir de su actividad en los entornos virtuales.
+Basándonos en la metodologia DBR se definirá un método que permita evaluar las competencias genéricas de los estudiantes a partir de su actividad en los entornos virtuales.
 
-\paragraph*{O2. Definir un DSL (\emph{Lenguaje Específico de Dominio}, del inglés, \emph{Domain-Specific Language}) que permita a los docentes diseñar y contrastar estrategias de evaluación a partir de los registros contenidos en los entornos de aprendizaje virtual}
+\paragraph*{O2. Definir un DSL (\emph{Lenguaje Específico de Dominio}, del inglés, \emph{Domain-Specific Language}) que permita a los docentes diseñar y contrastar estrategias de evaluación a partir de los registros de actividad de los entornos de aprendizaje virtual}
 
 Se definirán un conjunto de herramientas informáticas basadas en un DSL que implementen el método del objetivo O1 y que sea aplicable a diferentes entornos de virtuales de aprendizaje.
 
