--- a/1_introduction/3_objetivos.tex
+++ b/1_introduction/3_objetivos.tex
@@ -7,7 +7,7 @@ El principal objetivo de esta tesis es:
 
 %\textbf{Evaluar a los estudiantes en el desempeño de sus competencias genéricas mediante indicadores procedentes de los registros de actividades de aprendizaje}
 \bigskip
-\textbf{Proporcionar un método para diseñar y contrastar estrategias de evaluación de competencias genéricas a partir de los registros de actividad de los entornos de aprendizaje virtual, así como una herramienta informática que implemente el método}
+\textbf{Proporcionar un método y una herramienta informática para diseñar y contrastar estrategias de evaluación de competencias genéricas a partir de los registros de actividad de los entornos de aprendizaje virtual}
 \bigskip
 
 Para alcanzar dicho objetivo, se comenzará definiendo una serie de preguntas de investigación a las que se tratará de dar respuesta mediante una revisión de la literatura. Las preguntas de investigación son las siguientes:
