metodo pre-repaso

--- a/5_experiments_and_results/0_index.tex
+++ b/5_experiments_and_results/0_index.tex
@@ -268,7 +268,7 @@ La obtención de indicadores se basará en el \emph{ciclo de contraste de hipót
   \label{fig:EVCDiagram}
 \end{figure}
 
-\paragraph*{Ejemplo de uso}
+\paragraph*{Ejemplo de uso} % Este ejemplo lo he puesto en el método, en el ciclo
 
 En este ejemplo, el profesor pretende obtener indicadores del uso del foro para evaluar la competencia genérica de las habilidades interpersonales. Durante el curso, los estudiantes interactuarán en el foro conforme a las instrucciones proporcionadas por el profesor. Cuando lo desee, el profesor podrá utilizar EvalCourse para obtener los indicadores.
 
