--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -1369,6 +1369,23 @@ url={{http://eur-lex.europa.eu/legal-content/EN/TXT/PDF/?uri=CELEX:32006D1720&fr
 year = {2006}
 }
 
+@inproceedings{izquierdo2012community,
+  title={Community-driven language development},
+  author={Izquierdo, Javier Luis C{\'a}novas and Cabot, Jordi},
+  booktitle={Modeling in Software Engineering (MISE), 2012 ICSE Workshop on},
+  pages={29--35},
+  year={2012},
+  organization={IEEE}
+}
+
+@article{cole2005being,
+  title={Being proactive: where action research meets design research},
+  author={Cole, Robert and Purao, Sandeep and Rossi, Matti and Sein, Maung},
+  journal={ICIS 2005 Proceedings},
+  pages={27},
+  year={2005}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
