metodo listo, esperando revision

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -196,6 +196,7 @@
 
 %: ----------------------- overall methodology ------------------------
 % introduction
+% \setcounter{chapter}{3} % Fijar contador de capítulo
 \include{4_overall_methodology/0_index}
 	
 %: ----------------------- experiments and results ------------------------
