Trabajando en la evaluacion

--- a/4_overall_methodology/0_index.tex
+++ b/4_overall_methodology/0_index.tex
@@ -211,7 +211,7 @@ La herramienta que implemente el método debe cumplir una serie de requisitos qu
 \item \emph{Usabilidad}: la herramienta debe ser usable por usuarios de perfil no informático, por lo que su utilización debe ser sencilla y entendible por este tipo de usuarios.
 \end{itemize}
 
-A tenor de estos requisitos se decidió que la herramienta informática a implementar sería un \emph{lenguaje específico de dominio} (\emph{DSL}, del inglés, \emph{domain-specific language}). Un DSL es un lenguaje de programación orientado a un dominio concreto. Estos se han vuelto muy populares en los últimos años, y una de las principales razones es que facilitan la comunicación con los expertos en el dominio, proporcionando un texto común (código escrito en el DSL) que actúa a la vez como ejecutable y como una descripción que los expertos en el dominio pueden leer para entender como sus ideas se representan en el sistema~\cite{fowler2010domain}. En el método DBA, el ejecutable seria el diseño y los expertos en el dominio los profesores.
+A tenor de estos requisitos se decidió que la herramienta informática a implementar sería un \emph{lenguaje específico de dominio} (\emph{DSL}, del inglés, \emph{domain-specific language}). Un DSL es un lenguaje de programación orientado a un dominio concreto. Estos se han vuelto muy populares en los últimos años, y una de las principales razones es que facilitan la comunicación con los expertos en el dominio, proporcionando un texto común (código escrito en el DSL) que actúa a la vez como ejecutable y como una descripción que los expertos en el dominio pueden leer para entender como sus ideas se representan en el sistema~\cite{fowler2010domain}. En el método DBA, el ejecutable sería el diseño y los expertos en el dominio los profesores.
 
 
 
