--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -1386,6 +1386,16 @@ year = {2006}
   year={2005}
 }
 
+@article{duarte2012wikis,
+  title={Wikis in Teaching: An Experiment with WikiHaskell and StatMediaWiki},
+  author={Duarte, Manuel Palomo and Bulo, Inmaculada Medina and Posada, Emilio Jos{\'e} Rodr{\'\i}guez and Lozano, Francisco Palomo},
+  journal={RUSC. Universities and Knowledge Society Journal},
+  volume={9},
+  number={1},
+  pages={65--85},
+  year={2012}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
